# APU

./: .gitignore  README.md  cpuoptmonitor_cli.py  main.py  pyproject.toml  test_output.py  test_typer.py
src/apu/: __init__.py  bridge.py  cli.py  optimizer.py  profiler.py  sample_spmv.py
src/core/: CMakeLists.txt  core.cpp  profiler.cpp
src/cpuoptmonitor/: cli.py  mock_data.py
