[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apu"
version = "0.2.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "An adaptive runtime optimization system for CPUs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "scipy",
    "numpy",
]

[project.scripts]
apu = "apu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
